# whisper-dictation

./: pyproject.toml  requirements.txt  run.sh  whisper-dictation.py
