[tool.poetry]
name = "whisper-dictation"
version = "0.1.0"
description = "Multilingual Dictation App based on OpenAI Whisper"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pyaudio = "^0.2.13"
faster-whisper = "^1.1.1"
pynput = "^1.7.6"
rumps = "^0.4.0"

[tool.poetry.scripts]
whisper = "whisper-dictation:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
